--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -23,9 +23,11 @@
     "motion": "^12.7.4",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "pdfjs-dist": "3.11.174",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.1.0",
+    "react-pdf": "7.7.1",
     "rehype-pretty-code": "^0.13.2",
     "rehype-stringify": "^10.0.1",
     "remark-gfm": "^4.0.1",
@@ -41,6 +43,7 @@
     "@types/node": "^20.17.30",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
+    "@types/react-pdf": "^7.0.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.4",
     "postcss": "^8.5.3",
